URItest add output